check_errors_6.txt
    Checking klyric-gui v0.1.0 (D:\Workspace\lyric_video_maker\crates\klyric-gui)
warning: unused import: `keyboard`
 --> crates\klyric-gui\src\app.rs:8:5
  |
8 |     keyboard,
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `DebugWindowOpened` found for enum `Message` in the current scope
    --> crates\klyric-gui\src\app.rs:1136:18
     |
1136 |         Message::DebugWindowOpened(_) => {} // Deprecated
     |                  ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Message`
     |
    ::: crates\klyric-gui\src\message.rs:9:1
     |
   9 | pub enum Message {
     | ---------------- variant or associated item `DebugWindowOpened` not found for this enum

error[E0599]: no variant or associated item named `DebugWindowClosed` found for enum `Message` in the current scope
    --> crates\klyric-gui\src\app.rs:1137:18
     |
1137 |         Message::DebugWindowClosed(_) => {
     |                  ^^^^^^^^^^^^^^^^^ variant or associated item not found in `Message`
     |
    ::: crates\klyric-gui\src\message.rs:9:1
     |
   9 | pub enum Message {
     | ---------------- variant or associated item `DebugWindowClosed` not found for this enum

error[E0599]: no variant or associated item named `MainWindowOpened` found for enum `Message` in the current scope
    --> crates\klyric-gui\src\app.rs:1140:18
     |
1140 |         Message::MainWindowOpened(_) => {} // Deprecated
     |                  ^^^^^^^^^^^^^^^^ variant or associated item not found in `Message`
     |
    ::: crates\klyric-gui\src\message.rs:9:1
     |
   9 | pub enum Message {
     | ---------------- variant or associated item `MainWindowOpened` not found for this enum

error[E0277]: the trait bound `AutoScroll: std::default::Default` is not satisfied
   --> crates\klyric-gui\src\theme.rs:530:26
    |
530 |             auto_scroll: Default::default(),
    |                          ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `AutoScroll`

error[E0277]: the trait bound `AutoScroll: std::default::Default` is not satisfied
   --> crates\klyric-gui\src\theme.rs:562:30
    |
562 |                 auto_scroll: Default::default(),
    |                              ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `AutoScroll`

error[E0277]: the trait bound `AutoScroll: std::default::Default` is not satisfied
   --> crates\klyric-gui\src\theme.rs:595:30
    |
595 |                 auto_scroll: Default::default(),
    |                              ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `AutoScroll`

warning: variable does not need to be mutable
  --> crates\klyric-gui\src\main.rs:15:9
   |
15 |     let mut state = state::AppState::new();
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error: implementation of `FnOnce` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
   | |________________________________________________________________^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `FnOnce<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `std::ops::Fn` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
   | |________________________________________________________________^ implementation of `std::ops::Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `std::ops::Fn<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `std::ops::Fn<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
47 | |         .font(include_bytes!("../fonts/seguiemj.ttf").as_slice())
   | |_________________________________________________________________^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `FnOnce<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `std::ops::Fn` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
47 | |         .font(include_bytes!("../fonts/seguiemj.ttf").as_slice())
   | |_________________________________________________________________^ implementation of `std::ops::Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `std::ops::Fn<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `std::ops::Fn<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
...  |
53 | |             ..Default::default()
54 | |         });
   | |__________^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `FnOnce<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `std::ops::Fn` is not general enough
  --> crates\klyric-gui\src\main.rs:43:19
   |
43 |       let mut app = iced::application(new, app::update, view)
   |  ___________________^
44 | |         .subscription(app::subscription)
45 | |         .theme(|_| theme::dark_theme())
46 | |         .font(include_bytes!("../fonts/segoeui.ttf").as_slice())
...  |
53 | |             ..Default::default()
54 | |         });
   | |__________^ implementation of `std::ops::Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `std::ops::Fn<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `std::ops::Fn<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> crates\klyric-gui\src\main.rs:60:14
   |
60 |              app = app.font(&*Box::leak(bytes.into_boxed_slice()));
   |              ^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `FnOnce<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `std::ops::Fn` is not general enough
  --> crates\klyric-gui\src\main.rs:60:14
   |
60 |              app = app.font(&*Box::leak(bytes.into_boxed_slice()));
   |              ^^^ implementation of `std::ops::Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `std::ops::Fn<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `std::ops::Fn<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> crates\klyric-gui\src\main.rs:66:5
   |
66 |     app.run()
   |     ^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `FnOnce<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 AppState,)>`, for some specific lifetime `'2`

error: implementation of `std::ops::Fn` is not general enough
  --> crates\klyric-gui\src\main.rs:66:5
   |
66 |     app.run()
   |     ^^^^^^^^^ implementation of `std::ops::Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 AppState) -> iced::Theme` must implement `std::ops::Fn<(&'1 AppState,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `std::ops::Fn<(&'2 AppState,)>`, for some specific lifetime `'2`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `klyric-gui` (bin "klyric") generated 2 warnings
error: could not compile `klyric-gui` (bin "klyric") due to 16 previous errors; 2 warnings emitted
